Fix: display line on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ main section{
 }
 .console pre{
   text-wrap: wrap;
+  font-family: 'Courier New', Courier, monospace;
 }
 .console span{
     font-weight: bolder;
@@ -83,7 +84,7 @@ main section{
 svg {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 907px;
     pointer-events: none;
     top: 0;
     left: 0;
